--- a/MaxisGetIt/res/layout/activity_map_full.xml
+++ b/MaxisGetIt/res/layout/activity_map_full.xml
@@ -31,6 +31,7 @@
             android:layout_height="wrap_content"
             android:weightSum="1"
             android:layout_alignParentBottom="true"
+            android:visibility="gone"
             >
             <ImageView 
                 android:id="@+id/map_driving"
