--- a/MaxisGetIt/res/layout/activity_rate_company.xml
+++ b/MaxisGetIt/res/layout/activity_rate_company.xml
@@ -5,20 +5,24 @@
     android:layout_height="match_parent"
     android:background="@color/app_bg_base_col"
     android:orientation="vertical" >
+
     <include
         android:id="@+id/header_base_activity"
         layout="@layout/header_with_popdown_search" />
+
     <ScrollView
         android:id="@+id/reg_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/header_base_activity" >
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
             android:weightSum="1" >
+
             <TextView
                 android:id="@+id/col_records_found"
                 android:layout_width="match_parent"
@@ -33,6 +37,7 @@
                 android:textColor="@color/white"
                 android:textSize="@dimen/sp_12"
                 android:textStyle="bold" />
+
             <RatingBar
                 android:id="@+id/rc_rating_comp"
                 style="@style/customFeedbackLargeRatingBar"
@@ -44,8 +49,9 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="5dp"
                 android:numStars="5"
-                android:stepSize="1" 
-                android:paddingTop="10dp"/>
+                android:paddingTop="10dp"
+                android:stepSize="1" />
+
             <TextView
                 android:id="@+id/rc_label_tap_stars"
                 android:layout_width="wrap_content"
@@ -57,6 +63,7 @@
                 android:text="@string/rc_tap_stars"
                 android:textColor="@color/hyperlink_blue"
                 android:textSize="@dimen/sp_11" />
+
             <TextView
                 android:id="@+id/rc_label_write_review"
                 android:layout_width="match_parent"
@@ -73,6 +80,7 @@
                 android:textColor="@color/white"
                 android:textSize="@dimen/sp_12"
                 android:textStyle="bold" />
+
             <TextView
                 android:id="@+id/rc_label_provide_review"
                 android:layout_width="wrap_content"
@@ -86,23 +94,23 @@
                 android:textColor="@color/title_dark_grey"
                 android:textSize="@dimen/sp_12"
                 android:visibility="gone" />
-            
+
             <EditText
                 android:id="@+id/rc_review_text"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:layout_below="@id/rc_label_provide_review"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/shape_bg_edit_text"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/shape_bg_edit_text"
+                android:gravity="left|top"
                 android:maxLength="250"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
                 android:textColor="@color/text_light_grey"
-                android:gravity="left|top"
-                android:textSize="@dimen/sp_12"
-                />
+                android:textSize="@dimen/sp_12" />
+
             <TextView
                 android:id="@+id/rc_label_char_count"
                 android:layout_width="wrap_content"
@@ -113,39 +121,108 @@
                 android:layout_marginRight="10dp"
                 android:text="@string/rc_char_count"
                 android:textColor="@color/text_light_grey"
-                android:textSize="@dimen/sp_10" 
-                android:textStyle="italic"/>
+                android:textSize="@dimen/sp_10"
+                android:textStyle="italic" />
+
+            <!--
+                 <LinearLayout
+                android:id="@+id/rc_guest_detail_controller"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/rc_label_review_moderation"
+                android:orientation="vertical" >  -->
+
+
+            <!--
+                     <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/shape_bg_green_grey_stroke"
+                    android:paddingBottom="5dp"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="5dp"
+                    android:singleLine="true"
+                    android:text="@string/contact_detail"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/sp_12"
+                    android:textStyle="bold" />
+            -->
+
+            <LinearLayout
+                android:id="@+id/rc_guest_detail_controller"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/rc_label_char_count"
+                android:layout_margin="10dp"
+                android:weightSum="1" >
+
+                <TextView
+                    android:id="@+id/rc_name_txv"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".20"
+                    android:padding="5dp"
+                    android:text="@string/name"
+                    android:textColor="@color/text_light_grey"
+                    android:textSize="@dimen/sp_13" />
+
+                <TextView
+                    android:id="@+id/rc_astrisk_txv"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".10"
+                    android:drawableRight="@drawable/required_icon"
+                    android:padding="5dp"
+                    android:visibility="invisible" />
+
+                <EditText
+                    android:id="@+id/rc_user_name"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight=".70"
+                    android:background="@drawable/shape_bg_edit_text"
+                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
+                    android:inputType="textPersonName"
+                    android:maxLength="30"
+                    android:padding="5dp"
+                    android:singleLine="true"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/sp_13" />
+            </LinearLayout>
+            <!-- </LinearLayout> -->
+
             <TextView
                 android:id="@+id/rc_label_review_moderation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
-                android:layout_below="@id/rc_label_char_count"
+                android:layout_below="@id/rc_guest_detail_controller"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="5dp"
                 android:text="@string/rc_review_moderation"
                 android:textColor="@color/text_light_grey"
                 android:textSize="@dimen/sp_11" />
-            
+
             <TextView
-                    android:id="@+id/rc_submit_button"
-                    android:layout_below="@id/rc_label_review_moderation"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:background="@drawable/login_bg_green_button"
-                    android:clickable="true"
-                    android:gravity="center"
-                    android:text="@string/submit"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/sp_15"
-                    android:textStyle="bold" 
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_alignParentBottom="true"/>
+                android:id="@+id/rc_submit_button"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_alignParentBottom="true"
+                android:layout_below="@id/rc_label_review_moderation"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:background="@drawable/login_bg_green_button"
+                android:clickable="true"
+                android:gravity="center"
+                android:text="@string/submit"
+                android:textColor="@color/white"
+                android:textSize="@dimen/sp_15"
+                android:textStyle="bold" />
         </RelativeLayout>
     </ScrollView>
+
 </RelativeLayout>
