--- a/MaxisGetIt/res/layout/contest_upload_img_activity.xml
+++ b/MaxisGetIt/res/layout/contest_upload_img_activity.xml
@@ -112,6 +112,7 @@
                     android:hint="@string/txtv_anp_hint"
                     android:imeOptions="actionDone"
                     android:inputType="phone"
+                    android:digits="0123456789"
                     android:maxLength="11"
                     android:singleLine="true"
                     android:textColor="@color/black" />
