--- a/trunk/MaxisGetIt/res/layout/activity_deal_detail.xml
+++ b/trunk/MaxisGetIt/res/layout/activity_deal_detail.xml
@@ -214,7 +214,7 @@
                 android:layout_height="1dp"
                 android:background="@color/green" />
 
-            <TextView
+            <WebView
                 android:id="@+id/deal_desc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
